# greatest-common-divisor

./: Cargo.toml  README.md  build.rs
kernel/: Cargo.toml
kernel/src/: framebuffer.rs  main.rs
src/: main.rs
